# autoflux

./: LICENSE  README.md  TESTE_AGENT_GIT.md  __init__.py  autoflux.py  core.py  decorators.py  examples.py  pyproject.toml  strategies.py  utils.py
